[package]
name = "openlab-app-rest"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "wrap_help"] }
color-eyre = "0.6.5"
libc = "0.2.174"
moka = { version = "0.12.10", features = ["future"] }
oauth2 = "5.0.0"
openidconnect = { version = "4.0.0", features = ["accept-rfc3339-timestamps", "accept-string-booleans"] }
poem = { version = "3.1.11", features = ["compression", "eyre06", "websocket"] }
poem-openapi = { version = "5.1.15", features = [
    "swagger-ui",
    "time",
    "websocket",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_norway = "0.9.42"
time = { version = "0.3.41", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zeroize = { version = "1.8.1", features = ["std"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
